# OR_MAS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
modelpack/: llm.py  prompts.py
modelpack/agents/: agent0_specifier.py  agent1_extractor.py  agent3_mathifier.py  agent3c_schema.py  agent5_datagen.py  agent7_checker.py  agent9_judge.py  utils.py
modelpack/orchestration/: __init__.py
src/: __init__.py  __main__.py  llm.py  prompts.py  schemas.py
src/agents/: __init__.py  agent0_specifier.py  agent1_extractor.py  agent2_reviser.py  agent3_mathifier.py  agent3b_data_extractor.py  agent3c_schema.py  agent4_pyomo.py  agent5_datagen.py  agent6_screen.py  agent7_checker.py  agent8_solver.py  agent9_judge.py  audit_model.py  build_model.py  check_solution.py  derive_math.py  generate_data.py  judge_solution.py  screen_data.py  solve_model.py  specify_problem.py  utils.py
src/orchestration/: __init__.py  graph.py
